...
    super.dispose();
  }

  @override
  Widget build(BuildContext context) => pagina(
    widget.cuenta != null
        ? 'Movimientos de tu cuenta'
        : widget.tipo != null
        ? 'Movimientos asociados'
        : MediaQuery.textScalerOf(context).scale(12) > 16
        ? 'Movimientos'
        : 'Todos tus movimientos',
    [
...
          onPressed: ocupado ? null : () => cargar(inicial: true),
          icon: const Icon(Icons.refresh),
        ),
      ),
      Wrap(
        spacing: 8,
        children: ['Todos', 'Ingresos', 'Gastos']
            .map(
              (v) => ChoiceChip(
                label: Text(v),
                selected: filtro == v,
                onSelected: (_) => setState(() => filtro = v),
              ),
...
